--- a/source/src/main.less
+++ b/source/src/main.less
@@ -95,10 +95,7 @@ section{
         column-gap: 2%;
 
         @media @breakpointMobile{
-            display: grid;
-            grid-template-columns:25fr 25fr 25fr;
-            row-gap: 10%;
-            column-gap: 25%;
+            grid-template-rows:25fr 25fr 25fr;
         }
 
         .text-apis{
@@ -109,13 +106,14 @@ section{
             max-width: 120px;
             max-height: 100px;
             @media @breakpointMobile{
-                max-width: 80px;
+                max-width: 50px;
             }
         }
         .img-apis-2{
             max-height: 100px;
             @media @breakpointMobile{
-                max-height:65px;
+                max-height:45px;
+                margin: 0 35px;
             }
         }
     }
@@ -129,5 +127,3 @@ footer{
         padding: 12px;
     }
 }
-
-
